Fri Jun  9 07:00:13 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * templates/automake.mpd:

          Tweak so that _LDFLAGS isn't defined if am_version is defined,
          but library is not intended to be installed.

Wed Jun  7 12:56:17 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * templates/vc8.mpd:

          Modified this template to use 'libout' again such that .lib files
          do not go into the location specified by 'dllout' (if it was
          specified).  Thanks to Kitty B. for recognizing this situation and
          bringing it to my attention.

Tue May 30 12:21:54 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * modules/Driver.pm:

          Removed the run-time check for the minimum perl version.

        * mpc.pl:
        * mwc.pl:

          Added a load-time check for the minimum perl version (5.6).

Tue May 23 16:49:22 2006  Steve Huston  <shuston@riverace.com>

        * modules/AutomakeProjectCreator.pm (fill_value): If an include
          path begins with ".." (a relative path), prefix it with $(srcdir)
          to make it work properly when the build dir is not the same as the
          source dir.

Thu May 11 11:46:45 2006  Steve Huston  <shuston@riverace.com>

        * templates/automake.mpd: Allow an am_release variable to set
          a installable library's -release option. This allows users to
          choose whether to use libtool's -version-info option (with the
          am_version variable) or the -release option (with am_release).

Fri May  5 12:00:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * modules/BDSWorkspaceCreator.pm:
          Generate missing </BorlandProject>

Wed May  3 01:43:46 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * USAGE:

          Documented the -gendot option which generates input files for
          Graphvis.

        * modules/BMakeProjectCreator.pm:
        * modules/Creator.pm:
        * modules/DirectoryManager.pm: