@@ -38,14 +38,6 @@ sub fill_value {
     if (defined $incs) {
       my(@vec) = split(' ', $incs);
 
-      # The following prefixes relative include paths with $(srcdir)/.
-      foreach(@vec) {
-        if (/^\.\./) {
-          $_ = '$(srcdir)/' . $_;
-        }
-      }
-
-
 #      # The following prefixes include paths with $(srcdir)/.
 #      foreach(@vec) {
 #        if (/^[^\$\/]/) {
