@@ -1,3 +1,13 @@
+Fri Jun 09 14:49:25 2006  Steve Huston  <shuston@riverace.com>
+
+        * modules/AutomakeProjectCreator.pm (fill_value): Reverted:
+          Tue May 23 16:49:22 2006  Steve Huston  <shuston@riverace.com>
+          since it's not always correct to prefix to $srcdir. Sometimes
+          it needs to be relative to the build directory. This restores the
+          behavior put in place by:
+          Thu Dec 22 13:56:14 2005  J.T. Conklin  <jtc@acorntoolworks.com>
+          Thanks to J.T. for pointing this out.
+
 Fri Jun  9 07:00:13 2006  J.T. Conklin  <jtc@acorntoolworks.com>
 
         * templates/automake.mpd:
